--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./src/styles/reset.css" />
-    <link rel="stylesheet" href="./src/styles/style.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Singleton</title>
   </head>
   <body>
@@ -46,18 +46,21 @@
           </nav>
           <div class="header__auth">
             <a href="#" class="header__auth-link">Login</a>
-            <a href="#" class="header__auth-link header__auth-link--signup"
-              >Sign up</a
-            >
+            <a href="#" class="btn btn--outline header__auth-link--signup">
+              Sign up
+            </a>
           </div>
           <div class="header__toggle">
             <i class="fa fa-bars"></i>
           </div>
           <div class="header__overlay"></div>
         </header>
+
+        <!-- Hero section -->
+        <section class="hero"></section>
       </div>
     </div>
 
-    <script src="./src/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
