--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-            referrerpolicy="no-referrer"
-        />
-        <link rel="stylesheet" href="./styles/reset.css" />
-        <link rel="stylesheet" href="./styles/style.css" />
-        <title>Singleton</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <div class="container">
-                <!-- Header -->
-                <header class="header">
-                    <a href="#" class="header__logo">Singleton</a>
-                    <nav class="nav">
-                        <ul class="nav__list">
-                            <li class="nav__item">
-                                <a href="#" class="nav__link">About</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="#" class="nav__link">Services</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="#" class="nav__link">Projects</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="#" class="nav__link">Contacts</a>
-                            </li>
-                        </ul>
-                        <div class="nav__auth">
-                            <a href="#" class="nav__link">Login</a>
-                            <a href="#" class="nav__link">Sign up</a>
-                        </div>
-                    </nav>
-                    <div class="header__auth">
-                        <a href="#" class="header__auth-link">Login</a>
-                        <a
-                            href="#"
-                            class="btn btn--outline header__auth-link--signup"
-                        >
-                            Sign up
-                        </a>
-                    </div>
-                    <div class="header__toggle">
-                        <i class="fa fa-bars"></i>
-                    </div>
-                    <div class="header__overlay"></div>
-                </header>
-
-                <!-- Hero section -->
-                <section class="hero"></section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Singleton</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <!-- Header -->
+        <header class="header">
+          <a href="#" class="header__logo">Singleton</a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">About</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Services</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Projects</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Contacts</a>
+              </li>
+            </ul>
+            <div class="nav__auth">
+              <a href="#" class="nav__link">Login</a>
+              <a href="#" class="nav__link">Sign up</a>
             </div>
-        </div>
+          </nav>
+          <div class="header__auth">
+            <a href="#" class="header__auth-link">Login</a>
+            <a href="#" class="btn btn--outline header__auth-link--signup">
+              Sign up
+            </a>
+          </div>
+          <div class="header__toggle">
+            <i class="fa fa-bars"></i>
+          </div>
+          <div class="header__overlay"></div>
+        </header>
 
-        <script src="./js/main.js"></script>
-    </body>
+        <!-- Hero section -->
+        <section class="hero"></section>
+      </div>
+    </div>
+
+    <script src="./js/main.js"></script>
+  </body>
 </html>
