--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,32 @@
         </header>
 
         <!-- Hero section -->
-        <section class="hero"></section>
+        <section class="hero">
+          <div class="hero__info">
+            <h1 class="hero__title">
+              Make more time for the work that matters most
+            </h1>
+            <p class="hero__desc">
+              Create screens directly in Singleton or add your images from
+              Sketch or Figma. You can even sync designs from your cloud storage
+            </p>
+            <form class="form hero__form">
+              <div class="form__input">
+                <img src="./images/email.svg" alt="Email" class="form__icon" />
+                <input type="text" placeholder="Type your email" />
+              </div>
+              <button type="submit" class="btn btn--primary">
+                Get started
+              </button>
+            </form>
+          </div>
+          <div class="hero__image">
+            <img
+              src="./images/analytics.png"
+              alt="A woman talking about something"
+            />
+          </div>
+        </section>
       </div>
     </div>
 
