feat: client-section

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,31 @@
             />
           </div>
         </section>
+
+        <!-- Client section -->
+        <section class="client">
+          <div class="client__image">
+            <img src="./images/google.svg" alt="Google" />
+          </div>
+          <div class="client__image">
+            <img src="./images/chrome.svg" alt="Chrome" />
+          </div>
+          <div class="client__image">
+            <img src="./images/uber.svg" alt="Uber" />
+          </div>
+          <div class="client__image">
+            <img src="./images/stripe.svg" alt="Stripe" />
+          </div>
+          <div class="client__image">
+            <img src="./images/nike.svg" alt="Nike" />
+          </div>
+          <div class="client__image">
+            <img src="./images/airbnb.svg" alt="Airbnb" />
+          </div>
+          <div class="client__image">
+            <img src="./images/mastercard.svg" alt="Mastercard" />
+          </div>
+        </section>
       </div>
     </div>
 
