feat: feature section

--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,100 @@
       </div>
     </section>
 
+    <!-- Section feature -->
+    <section class="feature container">
+      <h2 class="section-heading section-heading--center feature__heading">
+        Save time managin social media for your business
+      </h2>
+      <div class="feature__list">
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/lock.svg" alt="Lock" />
+          </div>
+          <h3 class="feature__title">Security Management</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/fire.svg" alt="Fire" />
+          </div>
+          <h3 class="feature__title">Digital Agency</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/puzzle.svg" alt="Puzzle" />
+          </div>
+          <h3 class="feature__title">API Reference</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/people.svg" alt="People" />
+          </div>
+          <h3 class="feature__title">Team Accounts</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/user.svg" alt="User" />
+          </div>
+          <h3 class="feature__title">User Administration</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="./images/mail-red.svg" alt="Mail envelop" />
+          </div>
+          <h3 class="feature__title">Email Marketing</h3>
+          <p class="feature__desc">
+            It is a long established fact that a reader will distracted by the
+            readable content
+          </p>
+          <a href="#" class="feature__link">
+            <i class="fas fa-arrow-right"></i>
+          </a>
+        </div>
+      </div>
+      <div class="section-description">
+        <p>
+          Create screens directly in Singleton or add your images from Sketch or
+          Figma. You can even sync designs from your cloud storage
+        </p>
+        <a href="#" class="btn btn--primary">Explore All Feature</a>
+      </div>
+    </section>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
