feat: api-section

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
     </template>
 
     <!-- API section -->
-    <section class="api container">
+    <section class="api container margin-top">
       <div class="api__image">
         <img src="./images/tennisplayer2.png" alt="A woman playing tennis" />
       </div>
