feat: api-section

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,33 @@
         </a>
       </div>
     </section>
+
+    <!-- Invite section -->
+    <section class="invite container margin-top">
+      <h2 class="section-heading section-heading--center">
+        Invite friends & earn rewards
+      </h2>
+      <div class="media invite__media">
+        <div class="media__icon">
+          <i class="fas fa-play"></i>
+        </div>
+        <p class="media__text">Play introduction video</p>
+      </div>
+      <div class="invite__images">
+        <div class="invite__image">
+          <img src="./images/phone.jpg" alt="Phone" />
+        </div>
+        <div class="invite__image">
+          <img src="./images/keyfolder.png" alt="A man with red shirt" />
+        </div>
+      </div>
+      <div class="section-description">
+        <p>
+          Create screens directly in Singleton or add your images from Sketch or
+          Figma. You can even sync designs from your cloud storage
+        </p>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
