feat: plan-section

--- a/src/index.html
+++ b/src/index.html
@@ -180,6 +180,35 @@
         </p>
       </div>
     </section>
+
+    <!-- Plan section -->
+    <section class="plan container margin-top">
+      <h2 class="section-heading plan__heading">
+        Build the right plan for your team
+      </h2>
+      <div class="plan__list">
+        <!-- Include plan item data with template tag -->
+      </div>
+      <div class="section-description plan__desc">
+        <p>
+          Create screens directly in Singleton or add your images from Sketch or
+          Figma. You can even sync designs from your cloud storage
+        </p>
+      </div>
+    </section>
+
+    <template id="planItem">
+      <div class="plan__item">
+        <h4 class="plan__title"></h4>
+        <p class="plan__price"></p>
+        <div class="plan__info">
+          <p></p>
+          <p></p>
+          <p></p>
+        </div>
+        <a href="#" class="plan__link btn">Select Plan</a>
+      </div>
+    </template>
     <script src="./js/main.js"></script>
   </body>
 </html>
