--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,77 @@
         <a href="#" class="plan__link btn">Select Plan</a>
       </div>
     </template>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <a href="#" class="footer__logo">Singleton</a>
+          <div class="footer__links-wrap">
+            <div class="footer__links">
+              <h4 class="footer__links-title">Learn</h4>
+              <ul class="footer__links-list">
+                <li class="footer__links-item"><a href="#">Our Courses</a></li>
+                <li class="footer__links-item">
+                  <a href="#">The Programme</a>
+                </li>
+                <li class="footer__links-item"><a href="#">The Course</a></li>
+                <li class="footer__links-item"><a href="#">F.A.Q.</a></li>
+              </ul>
+            </div>
+            <div class="footer__links">
+              <h4 class="footer__links-title">Hire</h4>
+              <ul class="footer__links-list">
+                <li class="footer__links-item"><a href="#">Our Talent</a></li>
+                <li class="footer__links-item"><a href="#">Freelancers</a></li>
+                <li class="footer__links-item"><a href="#">Trainees</a></li>
+              </ul>
+            </div>
+            <div class="footer__links">
+              <h4 class="footer__links-title">About</h4>
+              <ul class="footer__links-list">
+                <li class="footer__links-item"><a href="#">Our Mission</a></li>
+                <li class="footer__links-item"><a href="#">Our Story</a></li>
+                <li class="footer__links-item"><a href="#">Our Culture</a></li>
+                <li class="footer__links-item"><a href="#">The Team</a></li>
+              </ul>
+            </div>
+            <div class="footer__links">
+              <h4 class="footer__links-title">Blog</h4>
+              <ul class="footer__links-list">
+                <li class="footer__links-item">
+                  <a href="#">Business Stories</a>
+                </li>
+                <li class="footer__links-item"><a href="#">Digital Mums</a></li>
+                <li class="footer__links-item"><a href="#">Learning</a></li>
+                <li class="footer__links-item"><a href="#">Social Media</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <form class="form footer__form">
+            <div class="form__input">
+              <img src="./images/email.svg" alt="Email" class="form__icon" />
+              <input type="text" placeholder="Type your email" />
+            </div>
+            <button type="submit" class="btn btn--primary">Get started</button>
+          </form>
+          <div class="footer__social">
+            <a href="#" class="footer__social-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="footer__social-link">
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#" class="footer__social-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
