fix: refactor template tag

--- a/src/index.html
+++ b/src/index.html
@@ -201,11 +201,7 @@
       <div class="plan__item">
         <h4 class="plan__title"></h4>
         <p class="plan__price"></p>
-        <div class="plan__info">
-          <p></p>
-          <p></p>
-          <p></p>
-        </div>
+        <div class="plan__info"></div>
         <a href="#" class="plan__link btn">Select Plan</a>
       </div>
     </template>
